# rq_vae

./: CLAUDE.md  README.md  TESTING.md  TEST_QUICK_START.md  colab_setup.ipynb  pyproject.toml  pytest.ini  run_tests.py  test_models.py
.devcontainer/: devcontainer.json
configs/: phase0_minimal.yaml  phase1_full_vae.yaml  phase2_transformer.yaml
scripts/: run_phase0.sh  run_phase1.sh  run_phase2.sh  runpod_setup.sh
src/: train_transformer.py  train_vae.py  utils.py
src/data/: __init__.py  dataset.py
src/model/: __init__.py  decoder.py  encoder.py  layers.py  quantizer.py  rq_transformer.py  rq_vae.py
tests/: README.md  __init__.py  conftest.py  mocks.py  test_dataset.py  test_decoder.py  test_encoder.py  test_layers.py  test_quantizer.py  test_rq_transformer.py  test_rq_vae.py
