[project]
name = "rq-vae"
version = "0.1.0"
description = "RQ-VAE for fast text decoding with Qwen3 backbone"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "datasets>=2.16.0",
    "wandb>=0.21.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "accelerate>=0.25.0",
    "unsloth>=2025.12.5",
    "lightning>=2.0.0",
    "rich>=13.0.0",
    "x-transformers>=2.11.24",
    "vector-quantize-pytorch>=1.27.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ipython>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

